test/sc++/error/forall-array-end.scpp
../../scc/error/forall-array-end.sc